@@ -4,16 +4,22 @@ project(*idl) : tao_versioning_idl_defaults, install {
   idlflags += -GX \
               -Wb,stub_export_macro=TAO_IFR_Client_Export \
               -Wb,stub_export_include=tao/IFR_Client/ifr_client_export.h \
+              -Wb,stub_export_file=ifr_client_export.h \
               -Wb,skel_export_macro=TAO_IFR_Client_Skel_Export \
               -Wb,skel_export_include=tao/IFR_Client/ifr_client_skel_export.h \
+              -Wb,skel_export_file=ifr_client_skel_export.h \
               -iC tao/IFR_Client -GT
   idlflags -= -Sa -St
+
+  IDL_Files {
+    idlflags += -Gxhst -Gxhsk
+    IFR_Base.pidl
+  }
 
   IDL_Files {
     IFR_Basic.pidl
     IFR_Components.pidl
     IFR_Extended.pidl
-    IFR_Base.pidl
   }
 
   specific {
@@ -36,6 +42,8 @@ project(IFR_Client) : taolib, tao_output, install, anytypecode, taoidldefaults {
 
   Header_Files {
     *.h
+    ifr_client_export.h
+    ifr_client_skel_export.h
     IFR_BaseC.h
     IFR_BaseA.h
     IFR_BasicC.h
